# DEFLATE-CPP

./: .gitignore  CMakeLists.txt  README.md
Huffman/: CMakeLists.txt  Huffman.cpp  Huffman.h
LZ77/: CMakeLists.txt  LZ77.cpp  LZ77.h
main/: CMakeLists.txt  lz_old.cpp  main.cpp  main.h
